--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,53 @@
-# Core image processing
-opencv-python>=4.10.0.84
-numpy>=1.26.4
-pillow>=10.4.0
+# ===============================
+# Core Python Libraries
+# ===============================
+numpy
+pandas
+matplotlib
+seaborn
+scikit-learn
+scipy
 
-# Metadata & data export
-pandas>=2.2.2
+# ===============================
+# Computer Vision & Image Processing
+# ===============================
+opencv-python
+opencv-python-headless
+scikit-image
+Pillow
 
-# CLI / utils
-argparse>=1.4.0
+# ===============================
+# Deep Learning (Training & Inference)
+# ===============================
+tensorflow>=2.12
+keras
+h5py
+
+# ===============================
+# Model Optimization & Deployment
+# ===============================
+tensorflow-datasets
+tensorflow-hub
+tflite-runtime
+
+# ===============================
+# IoT & Communication
+# ===============================
+paho-mqtt
+firebase-admin
+requests
+
+# ===============================
+# Dashboard / Web
+# ===============================
+flask
+flask-cors
+gunicorn
+
+# ===============================
+# Jupyter Notebook & Utils
+# ===============================
+jupyter
+notebook
+ipykernel
+tqdm
