--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,85 @@
+# ===============================
+# Web Framework & ASGI Server
+# ===============================
 fastapi[all]>=0.100.0
 uvicorn[standard]>=0.22.0
+flask
+flask-cors
+gunicorn
+
+# ===============================
+# Database & ORM
+# ===============================
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
 alembic>=1.12.0
-python-dotenv>=1.0.0
+
+# ===============================
+# Security & Authentication
+# ===============================
 passlib[bcrypt]>=1.7.4
 python-jose[cryptography]>=3.3.0
 email-validator>=2.1.0
+
+# ===============================
+# File & Data Handling
+# ===============================
 python-multipart>=0.0.9
-opencv-python>=4.8.0
+python-dotenv>=1.0.0
+
+# ===============================
+# Core Scientific & Data Libraries
+# ===============================
 numpy>=1.24.0
-Pillow>=10.0.0
-scikit-fuzzy>=0.4.2
-loguru>=0.7.0
-paho-mqtt>=1.6.0
 pandas>=2.0.0
-scikit-image>=0.22.0
-requests>=2.32.0
+scipy
+
+# ===============================
+# Machine Learning & AI
+# ===============================
 scikit-learn>=1.7.0
+scikit-fuzzy>=0.4.2
+scikit-image>=0.22.0
+
+# ===============================
+# Deep Learning (TensorFlow Stack)
+# ===============================
+tensorflow>=2.12
+keras
+h5py
+tensorflow-datasets
+tensorflow-hub
+tflite-runtime
+
+# ===============================
+# Computer Vision & Image Processing
+# ===============================
+opencv-python>=4.8.0
+opencv-python-headless
+Pillow>=10.0.0
+
+# ===============================
+# Visualization
+# ===============================
+matplotlib
+seaborn
+
+# ===============================
+# IoT & Communication
+# ===============================
+paho-mqtt>=1.6.0
+firebase-admin
+requests>=2.32.0
+
+# ===============================
+# Logging & Utilities
+# ===============================
+loguru>=0.7.0
+tqdm
+
+# ===============================
+# Development & Notebook
+# ===============================
+jupyter
+notebook
+ipykernel
